Move videoart to galery page

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="../assets/css/galeria.css">
+    <link rel="stylesheet" href="../assets/css/videoarte.css">
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-md p-3">
@@ -28,7 +29,7 @@
                     <a href="../galeria/">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../videoarte/">Videoarte</a>
+                    <a href="../instalacao/">Instalacao</a>
                 </li>
             </ul>
         </div>
@@ -176,50 +177,29 @@
             </a>
         </div>
         <!-- /Carousel -->
-        <h1 class="mt-5">VIDEOARTES</h1>
-        <!-- Card grid -->
-        <div class="card-columns">
-            <div class="card">
-                <a href="../videoarte"><img class="card-img-top" src="../assets/images/videoarte01.png" alt="Primeira imagem da videoarte"></a>
-                <div class="card-text">
-                    O conceito de ego, superego e id na teoria psicanalítica de Sigmund Freud, representando diferentes aspectos da psique humana é central para entendermos a videoarte.               </div>
-                <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
-            </div>
-            <div class="card">
-                <a href="../obras/2"><img class="card-img-top" src="../assets/images/videoarte02.png" alt="Segunda obra da exposição"></a>
-                <div class="card-text">
-                    FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine a instância psíquica como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Esse embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.
+        <!-- Videoarte -->
+        <section class="container">
+            <h1 class="my-5">VIDEOARTE</h1>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>EMARANHADOS PSIQUICOS</h2>
+                    <p>O conceito de ego, superego e id na teoria psicanalítica de Sigmund Freud, representando diferentes aspectos da psique humana é central para entendermos a videoarte.</p>
+                    <p>O id é a parte mais primitiva e instintiva da mente, buscando a satisfação imediata dos desejos e impulsos. É guiado pelo princípio do prazer, buscando gratificação sem levar em consideração normas sociais ou consequências. O ego é a parte da mente quelida com a realidade e busca equilibrar as demandas do id com as restrições da realidade. Age conforme o princípio da realidade, considerando as consequências e adaptando-se às normas sociais para satisfazer os desejos do id de maneira aceitável. O superego representa a internalização das normas sociais, valores e moral. Ele atua como uma espécie de "juiz interno", avaliando as ações do ego à luz de padrões éticos e morais. O superego se desenvolve ao longo do tempo, influenciado pela educação, sociedade e experiências. Essas três instâncias interagem dinamicamente, formando a estrutura psíquica. O equilíbrio entre o id, ego e superego é essencial para um funcionamento psicológico saudável. Conflitos entre essas partes podem levar a diferentes formas de comportamento e, muitas vezes, são explorados em terapia psicanalítica para promover o autoconhecimento e o desenvolvimento pessoal.</p>
                 </div>
-                <a href="../obras/2" class="see-more mt-3">VER MAIS</a>
-            </div>
-        </div>
-        <!-- /Card grid -->
-
-        <!-- Carousel -->
-        <div id="videoarteCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/videoarte01.png" alt="Primeira imagem da videoarte">
-                        <div class="card-text">
-                            O conceito de ego, superego e id na teoria psicanalítica de Sigmund Freud, representando diferentes aspectos da psique humana é central para entendermos a videoarte.               </div>
-                        <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/videoarte02.png" alt="Segunda imagem da videoarte">
-                        <div class="card-text">
-                            FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine a instância psíquica como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Esse embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.
-                        </div>
-                        <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
-                    </div>
+                <div class="col-lg-6">
+                    <h2>ALEGORIA</h2>
+                    <h3>a medica interior e a monstra do desejo</h3>
+                    <p>FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine sua mente como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Essa embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.</p>
+                    <p>Assim como uma médica que opera uma paciente, a médica interior deve realizar procedimentos delicados na própria psique. Ela é o guardiã da moral, da ética e do autodomínio. Sua tarefa é equilibrar os desejos e impulsos da monstra interior para manter a harmonia. No entanto, a monstra dos desejos é voraz e insaciável. Ela clama por gratificação imediata, muitas vezes ignorando as consequências a longo prazo. Como um paciente que exige cirurgias excessivas, a monstra pressiona a médica a ceder aos impulsos sem pensar nas implicações. A luta entre a médica e a monstra é constante. É um exercício de autorreflexão, autodomínio e autoconhecimento. A médica deve operar os próprios desejos com precisão, considerando cuidadosamente as ações e escolhas a serem feitas. Ela precisa encontrar um equilíbrio entre o atendimento das necessidadeslegítimas e o controle dos impulsos destrutivos. Essa analogia nos lembra que todos enfrentamos uma batalha interna entre nossa natureza racional e nossos desejos mais profundos. Encontrar o equilíbrio e operar em si mesma é um exercício de autocontrole, ética e auto descoberta que pode levar a uma vida mais equilibrada e satisfatória</p>
+                    <p>A jornada de autodescoberta culmina em FEMMINA reivindicando sua
+                        identidade travesti com orgulho, integrando harmoniosamente as duas facetas de sua
+                        persona.</p>
                 </div>
             </div>
-            <a class="carousel-control-next" href="#videoarteCarousel" role="button" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </a>
-        <!-- /Carousel -->
+            <div class='embed-container container'>
+                <iframe src='' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+        </section>
     </main>
     <footer class="mt-auto">
         <!--Patrocínios -->
