--- a/obras/6/index.html
+++ b/obras/6/index.html
@@ -28,7 +28,7 @@
                     <a href="../../galeria/">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../../videoarte/">Videoarte</a>
+                    <a href="../../instalacao/">Instalacao</a>
                 </li>
             </ul>
         </div>
