Changes in home page design

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
     <link rel="stylesheet" href="./assets/css/home.css">
 </head>
-<body class="d-flex flex-column">
-    <section class="cover">
-        <img src="./assets/images/lins-wide.png" alt="">
-        <div class="quote-box">
-            <p class="quote-text">“Que você possa mergulhar nas narrativas entrelaçadas criadas de maneira singular e que minha arte se torne uma linha para reflexões profundas sobre identidade e liberdade.”</p>
-            <p class="quote-author">LINSKER MARIM</p>
-            <a href="./galeria/" class="see-work">VER OBRAS</a>
+<body>
+    <section class="cover d-flex flex-column">
+        <img src="./assets/images/lins-wide.png" alt="Capa da exposição">
+        <div class="quote-box mt-auto mb-2">
+            <p class="quote-text h2">“Que você possa mergulhar nas narrativas entrelaçadas criadas de maneira singular e que minha arte se torne uma linha para reflexões profundas sobre identidade e liberdade.”</p>
+            <p class="quote-author h1">LINSKER MARIM</p>
         </div>
     </section>
     <nav id="home" class="navbar navbar-dark navbar-expand-md p-3 sticky-top">
@@ -36,7 +35,7 @@
                     <a href="./galeria/">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./videoarte/">Videoarte</a>
+                    <a href="./instalacao/">Instalacao</a>
                 </li>
             </ul>
         </div>
@@ -45,12 +44,12 @@
         <article>
             <section id="apresentacao">
                 <div class="row">
+                    <h1>APRESENTACAO</h1>
                     <p>O tecido que compõe a sociedade é, de certa forma, entrelaçado por tramas e fios invisíveis, assim como o tecido têxtil que usamos diariamente. Nas questões de gênero, essas tramas sociais representam as normas, papéis e expectativas que a sociedade impõe aos indivíduos com base no seu gênero. Assim como um tecido é formado por tramas horizontais e verticais, as tramas sociais de gênero são multifacetadas e interligadas.</p>
                     <p>Em uma análise mais profunda, podemos comparar as tramas do tecido com as estruturas que perpetuam a desigualdade de gênero. Assim como diferentes tipos de fios e padrões criam texturas únicas em um tecido, a diversidade de identidades de gênero e orientações sexuais contribui para a complexidade da sociedade. No entanto, essas tramas sociais muitas vezes são tecidas de forma desigual, resultando em discriminação, estereótipos e preconceitos. Assim como o processo de tecelagem pode ser desconstruído e refeito para criar novos padrões, a sociedade pode e deve ser transformada para promover a igualdade de gênero. Isso envolve reconhecer e desafiar as tramas sociais prejudiciais, empoderando indivíduos a expressarem sua identidade de gênero autêntica e promovendo a inclusão e o respeito por todas as formas de expressão de gênero.</p>
                 </div>
-                <div class="row background-text-container">
-                    <div class="background-text background-text-left">APRESEN<br>TACAO</div>
-                    <img src="./assets/images/transgressao.png" alt="">
+                <div class="row my-3">
+                    <img src="./assets/images/transgressao.png" alt="Definição da palavra transgressão">
                 </div>
                 <div class="row">
                     <p>É importante notar que a percepção da transgressão varia amplamente de uma cultura para outra e ao longo do tempo. O que é considerado uma transgressão em uma sociedade pode ser aceito em outra. Além disso, o grau de aceitação ou rejeição da transgressão pode depender da gravidade do ato e das circunstâncias envolvidas.A transgressão também desafia a noção de conformidade e obediência, e pode gerar debates sobre ética, moralidade e justiça. Em alguns casos, a transgressão pode ser vista como uma forma de resistência contra estruturas de poder opressivas, enquanto em outros contextos, pode ser condenada como comportamento antissocial ou criminoso. Em resumo, a transgressão é um conceito amplo que envolve a quebra de normas e convenções estabelecidas. Ela desempenha um papel fundamental na dinâmica social e na evolução das sociedades, desafiando o que é considerado aceitável e promovendo a mudança e o progresso.</p>
@@ -60,8 +59,13 @@
             
             <section id="subversao">
                 <div class="row background-text-container">
-                    <div class="background-text">SUBVERSAO<br>DE GENERO</div>
-                    <div class="col-lg-6"></div>
+                    <!-- <div class="background-text">SUBVERSAO<br>DE GENERO</div> -->
+                </div>
+                <h1 class="d-block d-lg-none">SUBVERSAO DE GENERO</h1>
+                <div class="row">
+                    <div class="col-lg-6 d-none d-lg-flex flex-column">
+                        <h1 class="vertical display-1">SUBVERSAO<br> DE GENERO</h1>
+                    </div>
                     <div class="col-lg-6 text-right">
                         <p>A desconstrução da ideia binária de gênero, historicamente fundamentada nos cromossomos (XX para mulheres e XY para homens), envolve questionar essa abordagem simplista. Reconhecendo a complexidade da identidade de gênero, é crucial notar que os cromossomos, embora contribuam para a determinação biológica do sexo, apresentam diversas variações, como na Síndrome de Turner (X0) e Síndrome de Klinefelter (XXY). Além disso, é essencial distinguir entre a predefinição biológica e a identidade de gênero. Esta última não é diretamente determinada pelos cromossomos, referindo-se à vivência interna e pessoal do próprio gênero, enquanto a expressão de gênero está relacionada às características socialmente atribuídas. Ambas podem variar independentemente dos cromossomos.</p>
                         <p>Muitos aspectos associados ao gênero, como comportamentos e papéis sociais, são construções sociais. Desconstruir a ideia de que características específicas são intrinsecamente ligadas aos cromossomos abre espaço para uma compreensão mais ampla e inclusiva do gênero. Judith Butler, filósofa e teórica queer, introduz o conceito de "performatividade de gênero", desafiando a noção de que o gênero é uma expressão estável e inata. Butler destaca que o gênero é uma performance socialmente construída, moldada por normas culturais. Paul B. Preciado, em diálogo com Butler, propõe o conceito de "gênero enquanto produto", conectando a performatividade de gênero ao consumo. Ele desafia as noções tradicionais de gênero, enfatizando como é produzido e reproduzido por práticas sociais e políticas. Reconhecer e validar as experiências de pessoas não-binárias é fundamental, desafiando a rigidez da dicotomia de gênero e destacando que a identidade de gênero é uma experiência subjetiva. A autodeterminação de gênero é crucial nos debates contemporâneos sobre identidade de gênero e direitos LGBTQ+, referindo-se ao direito de uma pessoa determinar como se identifica, independentemente de expectativas sociais.</p>
@@ -71,11 +75,14 @@
             </section>
             
             <section id="mundo-rosa">
-                <div class="row background-text-container">
-                    <div class="background-text" style="text-align: right;">MUNDO<br>ROSA</div>
-                    <div class="col-6">
+                <h1 class="d-block d-lg-none">MUNDO ROSA</h1>
+                <div class="row">
+                    <div class="col-lg-6">
                         <p>A opção pela criação de um "mundo rosa" não é casual. Além de refletir a preferência da artista por explorar o monocromático, tons sobre tons e nuances da mesma cor, o uso consistente da cor rosa, em suas diversas manifestações, desempenha um papel crucial na construção estética que tece toda a narrativa.</p>
                         <p>No livro "A partilha do sensível," publicado em 2000, o filósofo francês Jacques Rancière investiga a interligação entre política, estética e percepção, introduzindo o conceito de "a partilha do sensível." Esse termo descreve como elementos sensíveis, como imagens, sons e palavras, são distribuídos e organizados na sociedade. Rancière argumenta que essa distribuição não é apenas uma divisão de objetos, mas também uma divisão política que molda o acesso ao sensível e à participação na vida política de diferentes grupos. Para o autor, a estética não está dissociada da política; ambas estão intrinsicamente ligadas. Ele sustenta que nossa percepção e experiência do mundo têm implicações políticas profundas, onde a partilha do sensível é central na determinação de quem tem acesso à política e quem é excluído. Criticando a ideia convencional de política baseada na representação, Rancière propõe uma política da igualdade, na qual a partilha do sensível permite que cada indivíduo expresse sua própria voz e participe plenamente na vida política.</p>
+                    </div>
+                    <div class="col-lg-6 d-none d-lg-flex flex-column">
+                        <h1 class="text-end display-1">MUNDO<br>ROSA</h1>
                     </div>
                 </div>
                         <p>Rancière enfatiza a importância de uma estética da igualdade, onde diversas formas de expressão artística desafiam hierarquias sociais e políticas. Ele vê a arte como um meio de reconfigurar a partilha do sensível e, assim, questionar as divisões políticas existentes. Na obra "AISTHESIS," o filósofo introduz o conceito de "regime estético da arte," destacando a ideia de que a estética, nesse regime, não é mais exclusiva das elites. Ele argumenta que a arte contemporânea desafia as hierarquias tradicionais, permitindo que a experiência estética seja compartilhada por uma gama mais ampla de pessoas.</p>
@@ -84,6 +91,10 @@
                         <p>Tecendo seu "mundo rosa" de maneira consciente e deliberada, a artista contribui para a ampliação do entendimento coletivo sobre as diversas expressões de feminilidade. Essa abordagem desafia a dicotomia tradicional entre masculino e feminino, destacando a fluidez e complexidade. Assim, sua prática artística não apenas é uma expressão individual, mas também um catalisador para a evolução do discurso social em torno da diversidade de identidades de gênero, impactando positivamente a conscientização coletiva.</p>
             </section>
         </article>
+        <div class="row mb-5 justify-content-center">
+            <div class="col-3"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
+            <div class="col-3"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
+        </div>
     </main>
     <footer class="mt-auto">
         <div class="container">
