--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </nav>
     <main class="container">        
         <article>
-            <section id="apresentacao">
+            <section id="apresentacao" class="my-5">
                 <div class="row">
-                    <h1>APRESENTACAO</h1>
+                    <h1 class="title-text-small">APRESENTACAO</h1>
                     <p>O tecido que compõe a sociedade é, de certa forma, entrelaçado por tramas e fios invisíveis, assim como o tecido têxtil que usamos diariamente. Nas questões de gênero, essas tramas sociais representam as normas, papéis e expectativas que a sociedade impõe aos indivíduos com base no seu gênero. Assim como um tecido é formado por tramas horizontais e verticais, as tramas sociais de gênero são multifacetadas e interligadas.</p>
                     <p>Em uma análise mais profunda, podemos comparar as tramas do tecido com as estruturas que perpetuam a desigualdade de gênero. Assim como diferentes tipos de fios e padrões criam texturas únicas em um tecido, a diversidade de identidades de gênero e orientações sexuais contribui para a complexidade da sociedade. No entanto, essas tramas sociais muitas vezes são tecidas de forma desigual, resultando em discriminação, estereótipos e preconceitos. Assim como o processo de tecelagem pode ser desconstruído e refeito para criar novos padrões, a sociedade pode e deve ser transformada para promover a igualdade de gênero. Isso envolve reconhecer e desafiar as tramas sociais prejudiciais, empoderando indivíduos a expressarem sua identidade de gênero autêntica e promovendo a inclusão e o respeito por todas as formas de expressão de gênero.</p>
                 </div>
@@ -58,16 +58,16 @@
                 </div>
             </section>
             
-            <section id="subversao">
+            <section id="subversao" class="my-5">
                 <div class="row background-text-container">
                     <!-- <div class="background-text">SUBVERSAO<br>DE GENERO</div> -->
                 </div>
-                <h1 class="d-block d-lg-none">SUBVERSAO DE GENERO</h1>
+                <h1 class="d-block d-lg-none title-text">SUBVERSAO DE GENERO</h1>
                 <div class="row">
-                    <div class="col-lg-6 d-none d-lg-flex flex-column">
-                        <h1 class="vertical display-1">SUBVERSAO<br> DE GENERO</h1>
+                    <div class="col-lg-4 d-none d-lg-flex flex-column">
+                        <h1 class="vertical title-text">SUBVERSAO<br> DE GENERO</h1>
                     </div>
-                    <div class="col-lg-6 text-right">
+                    <div class="col-lg-8 text-right d-flex flex-column justify-content-center">
                         <p>A desconstrução da ideia binária de gênero, historicamente fundamentada nos cromossomos (XX para mulheres e XY para homens), envolve questionar essa abordagem simplista. Reconhecendo a complexidade da identidade de gênero, é crucial notar que os cromossomos, embora contribuam para a determinação biológica do sexo, apresentam diversas variações, como na Síndrome de Turner (X0) e Síndrome de Klinefelter (XXY). Além disso, é essencial distinguir entre a predefinição biológica e a identidade de gênero. Esta última não é diretamente determinada pelos cromossomos, referindo-se à vivência interna e pessoal do próprio gênero, enquanto a expressão de gênero está relacionada às características socialmente atribuídas. Ambas podem variar independentemente dos cromossomos.</p>
                         <p>Muitos aspectos associados ao gênero, como comportamentos e papéis sociais, são construções sociais. Desconstruir a ideia de que características específicas são intrinsecamente ligadas aos cromossomos abre espaço para uma compreensão mais ampla e inclusiva do gênero. Judith Butler, filósofa e teórica queer, introduz o conceito de "performatividade de gênero", desafiando a noção de que o gênero é uma expressão estável e inata. Butler destaca que o gênero é uma performance socialmente construída, moldada por normas culturais. Paul B. Preciado, em diálogo com Butler, propõe o conceito de "gênero enquanto produto", conectando a performatividade de gênero ao consumo. Ele desafia as noções tradicionais de gênero, enfatizando como é produzido e reproduzido por práticas sociais e políticas. Reconhecer e validar as experiências de pessoas não-binárias é fundamental, desafiando a rigidez da dicotomia de gênero e destacando que a identidade de gênero é uma experiência subjetiva. A autodeterminação de gênero é crucial nos debates contemporâneos sobre identidade de gênero e direitos LGBTQ+, referindo-se ao direito de uma pessoa determinar como se identifica, independentemente de expectativas sociais.</p>
                         <p>Ao optar por uma abordagem subversiva que desafia as noções binárias tradicionais de gênero, destacando a complexidade e diversidade na biologia, identidade e expressão degênero, este trabalho promove um entendimento mais inclusivo, respeitando a autonomia das pessoas em definir suas próprias identidades.</p>
@@ -75,15 +75,15 @@
                 </div>
             </section>
             
-            <section id="mundo-rosa">
-                <h1 class="d-block d-lg-none">MUNDO ROSA</h1>
+            <section id="mundo-rosa" class="my-5">
+                <h1 class="d-block d-lg-none title-text">MUNDO ROSA</h1>
                 <div class="row">
                     <div class="col-lg-6">
                         <p>A opção pela criação de um "mundo rosa" não é casual. Além de refletir a preferência da artista por explorar o monocromático, tons sobre tons e nuances da mesma cor, o uso consistente da cor rosa, em suas diversas manifestações, desempenha um papel crucial na construção estética que tece toda a narrativa.</p>
                         <p>No livro "A partilha do sensível," publicado em 2000, o filósofo francês Jacques Rancière investiga a interligação entre política, estética e percepção, introduzindo o conceito de "a partilha do sensível." Esse termo descreve como elementos sensíveis, como imagens, sons e palavras, são distribuídos e organizados na sociedade. Rancière argumenta que essa distribuição não é apenas uma divisão de objetos, mas também uma divisão política que molda o acesso ao sensível e à participação na vida política de diferentes grupos. Para o autor, a estética não está dissociada da política; ambas estão intrinsicamente ligadas. Ele sustenta que nossa percepção e experiência do mundo têm implicações políticas profundas, onde a partilha do sensível é central na determinação de quem tem acesso à política e quem é excluído. Criticando a ideia convencional de política baseada na representação, Rancière propõe uma política da igualdade, na qual a partilha do sensível permite que cada indivíduo expresse sua própria voz e participe plenamente na vida política.</p>
                     </div>
-                    <div class="col-lg-6 d-none d-lg-flex flex-column">
-                        <h1 class="text-end display-1">MUNDO<br>ROSA</h1>
+                    <div class="col-lg-6 d-none d-lg-flex d-flex flex-column justify-content-center">
+                        <h1 class="text-end title-text">MUNDO<br>ROSA</h1>
                     </div>
                 </div>
                         <p>Rancière enfatiza a importância de uma estética da igualdade, onde diversas formas de expressão artística desafiam hierarquias sociais e políticas. Ele vê a arte como um meio de reconfigurar a partilha do sensível e, assim, questionar as divisões políticas existentes. Na obra "AISTHESIS," o filósofo introduz o conceito de "regime estético da arte," destacando a ideia de que a estética, nesse regime, não é mais exclusiva das elites. Ele argumenta que a arte contemporânea desafia as hierarquias tradicionais, permitindo que a experiência estética seja compartilhada por uma gama mais ampla de pessoas.</p>
@@ -92,9 +92,9 @@
                         <p>Tecendo seu "mundo rosa" de maneira consciente e deliberada, a artista contribui para a ampliação do entendimento coletivo sobre as diversas expressões de feminilidade. Essa abordagem desafia a dicotomia tradicional entre masculino e feminino, destacando a fluidez e complexidade. Assim, sua prática artística não apenas é uma expressão individual, mas também um catalisador para a evolução do discurso social em torno da diversidade de identidades de gênero, impactando positivamente a conscientização coletiva.</p>
             </section>
         </article>
-        <div class="row my-5 justify-content-center gap-5">
-            <div class="col-lg-3"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
-            <div class="col-lg-3"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
+        <div class="row my-5 justify-content-center gap-3">
+            <div class="col-lg-3 d-flex flex-column align-items-center"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
+            <div class="col-lg-3 d-flex flex-column align-items-center"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
         </div>
     </main>
     <footer class="mt-auto">
